style.css
@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Titillium+Web:ital,wght@0,300;0,600;1,300;1,600&display=swap');
/* font-family: 'Bebas Neue', cursive;
font-family: 'Titillium Web', sans-serif; */

@media only screen and (max-width: 700px) {
  /* For mobile phones: */
  body nav li a {
    display: flex;
    justify-content: center;
    align-items: center;
    color: rgba(0, 51, 105, 0.904);
    padding: 14px 30px;
    text-decoration: none;
    font-family: 'Bebas Neue', cursive;
    font-size: 5vw;
    
  }

  body label {
    cursor: pointer;
    text-indent: -9999px;
    width: 10%;
    height: 3%;
    background: rgb(27, 27, 27);
    display: block;
    border-radius: 90px;
    position: absolute;
    right: 10px;
    top: 10px;
  }
  
  label:after {
    content: '';
    position: absolute;
    top: 10%;
    left: 10%;
    width: 40%;
    height: 75%;
    background: grey;
    border-radius: 90px;
    transition: .3s;
  }

  body {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-content: center;
  }
  body header {
    margin-top: 1vw;
    width: 50%;
    display: flex;
    justify-content: center;
    margin: auto;
  }

  body p {
    text-align: center;
  }

  body header figure img {
    width: 90%;
    height: 90%;
    position: relative;
    top: 5vw;
    right: 0px;
    margin-bottom: 15vw;
  }

  .projectHeader {
    margin-top: 5vw;
  }

  @keyframes leftslidein {
    from {
      margin-left: 150%;
      width: 100%;
    }
  
    to {
      margin-left: 0%;
      width: 100%;
    }
  }

  .slowLeftSlidIn {
    animation-duration: 1.5s;
    animation-name: slowLeftSlidIn;
   }
  
   @keyframes slowLeftSlidIn {
    from {
      margin-left: 150%;
      width: 100%;
    }
  
    to {
      margin-left: 0%;
      width: 100%;
    }
  }

  body .wrapper {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-content: center;
    align-items: center;
    text-align: center;
  }

  .wrapper h1 {
     font-size: 10vw;
   }
  
   .wrapper h2 {
     font-size: 5vw;
   }


  body .firstSection{
    font-size: 3vw;
    padding: 0px;
    width: 100%;
    text-align: center;
    justify-content: center;
    align-content: center;
    display: flex;
    flex-direction: column;
    float: none;
  }
  body .otherSections {
    font-size: 3vw;
    padding: 0px;
    width: 100%;
    flex-direction: column;
    display: flex;

  }

  body .projectSections {
    display: flex;
    flex-direction: column;
    justify-content: center
  }

  section article span {
  font-size: 3vw;
  text-align: center;
  justify-content: center;
  align-content: center;
  display: flex;
  flex-direction: column;
  }














  
}





body {
  margin: 0%;
  font-family: 'Titillium Web', sans-serif;
}
/* Properties for Light and Dark Mode */
/* ----------------------------------- */
.light {
  background-color: whitesmoke;
}

.dark {
  background-color: rgb(27, 27, 27);
}

.dark h1 {
  color: whitesmoke;
}

.dark h2 {
  color: whitesmoke;
}

.dark li a {
  color: whitesmoke;
}

.dark p {
  color: whitesmoke;
}

.dark li {
  color: whitesmoke;
}

.dark a {
  color: whitesmoke;
}

.dark figcaption {
  color: whitesmoke;
}
/* ---------------------------------- */

/* Nav Styles */
/* ---------------------------------- */
 nav li {
  float: left;
  height: 45px;
}

nav ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
}

nav li a {
  display: block;
  color: rgba(0, 51, 105, 0.904);
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  font-family: 'Bebas Neue', cursive;
  font-size: 1.5vw;
  
}


nav li a:hover {
  color: rgb(78, 78, 78);
  text-shadow: 6px 4px 6px rgba(0,0,0,0.6);
 
}


/* ---------------------------------------------- */

/* Dark Mode / Light Mode CSS */
/* ---------------------------------------------- */

input[type=checkbox]{
	height: 0;
	width: 0;
	visibility: hidden;
}

label {
	cursor: pointer;
	text-indent: -9999px;
	width: 2%;
	height: 3%;
	background: rgb(27, 27, 27);
	display: block;
	border-radius: 90px;
	position: absolute;
  right: 10px;
  top: 10px;
}

label:after {
	content: '';
	position: absolute;
	top: 10%;
	left: 10%;
	width: 40%;
	height: 80%;
	background: grey;
	border-radius: 90px;
	transition: .3s;
}

input:checked + label {
	background: whitesmoke;
}

input:checked + label:after {
	left: calc(100% - 10%);
	transform: translateX(-100%);
  background: grey;
}

label:active:after {
	width: 40%;
}


/* ------------------------------------------------------ */


header {
  width: 50%;
  float: right;
  margin-bottom: 10vw;
}

 header section {
   height: auto;
   width: fit-content;
   display: block;
   color: rgba(0, 51, 105, 0.897);
 }

 header .slowLeftSlidIn section {
  width: fit-content;
  display: block;
  color: rgba(0, 51, 105, 0.671);
 }

 header figure img {
  width: 35%;
  height: 35%;
  border-radius: 50%;
  display: block;
  margin: auto;
  position: relative;
  top: 12vw;
  right: 35vw;
}

#secondprofilepic {
  border-radius: 10%;
}

 .leftSlidIn {
  animation-duration: 1s;
  animation-name: leftslidein;
 }

 @keyframes leftslidein {
  from {
    margin-left: 100%;
    width: 100%;
  }

  to {
    margin-left: 0%;
    width: 100%;
  }
}

.slowLeftSlidIn {
  animation-duration: 1.5s;
  animation-name: slowLeftSlidIn;
 }

 @keyframes slowLeftSlidIn {
  from {
    margin-left: 100%;
    width: 100%;
  }

  to {
    margin-left: 0%;
    width: 100%;
  }
}

.fadeIn {
  animation: fadeIn ease 1.5s;
  -webkit-animation: fadeIn ease 2s;
  -moz-animation: fadeIn ease 2s;
  -o-animation: fadeIn ease 2s;
  -ms-animation: fadeIn ease 2s;
}
@keyframes fadeIn {
  0% {
    opacity:0;
  }
  100% {
    opacity:1;
  }
}

@-moz-keyframes fadeIn {
  0% {
    opacity:0;
  }
  100% {
    opacity:1;
  }
}

@-webkit-keyframes fadeIn {
  0% {
    opacity:0;
  }
  100% {
    opacity:1;
  }
}

@-o-keyframes fadeIn {
  0% {
    opacity:0;
  }
  100% {
    opacity:1;
  }
}

@-ms-keyframes fadeIn {
  0% {
    opacity:0;
  }
  100% {
    opacity:1;
}
}

h1 {
  font-family: 'Bebas Neue', cursive;
   text-align: center;
   margin: auto;
   font-size: 3vw;
 }

 h2 {
   font-size: 2vw;
 }

 header div {
   margin-bottom: 1%;
 }

  main {
   width: 100%;
   display: flex;
   justify-content: center;
   flex-direction: column;
   color: black;
   font-size: 1.5vw;
  
 }

.firstSection {
   padding-top: 20vw;
   position: relative;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-content: center;
   align-items: center;

 }

 article {
   width: 50%;
   padding: 5vw;
 }

 figure img{
   width: 30vw;
 }

 .otherSections {
  position: relative;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-content: center;
  align-items: center;
}

article span {
  text-align: center;
  justify-content: center;
  align-content: center;
  display: flex;
  flex-direction: column;
  }

.smallerImg img{
  width: 10vw;
}

.projectHeader {
  width: 55%;
}

.projectSections {
  padding-top: 0vw;
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-content: center;
  align-items: center;

}

a{
  color: rgba(0, 51, 105, 0.897);
}

.projectSections img {
  width: 50vw;
}

.projectSections figcaption {
  display: flex;
  justify-content: center;
  font-size: 3vw;
}

.projectSections figcaption a {
  color: black;
}

.projectSections figcaption a:visited {
  color: black;
}

.projectSections figcaption a:hover {
  color: rgb(78, 78, 78);
}







 

